# convex_decomposition

./: .travis.yml  CHANGELOG.rst  CMakeLists-CD.txt  CMakeLists.txt  Dockerfile-dashing  README.md  package.xml  stack.xml
src/: DecomposeSample.cpp
src/ConvexDecomposition/: ConvexDecomposition.cpp  ConvexDecomposition.h  bestfit.cpp  bestfit.h  bestfitobb.cpp  bestfitobb.h  cd_hull.cpp  cd_hull.h  cd_vector.h  cd_wavefront.cpp  cd_wavefront.h  concavity.cpp  concavity.h  fitsphere.cpp  fitsphere.h  float_math.cpp  float_math.h  meshvolume.cpp  meshvolume.h  planetri.cpp  planetri.h  raytri.cpp  raytri.h  splitplane.cpp  splitplane.h  triangulate.cpp  triangulate.h  vlookup.cpp  vlookup.h
