<package format="2">
  <name>convex_decomposition</name>
  <version>1.0.0</version>
  <description>Convex Decomposition Tool for Robot Model</description>
  <author email="jratcliff@infiniplex.net">John W. Ratcliff</author>

  <maintainer email="ros-orphaned-packages@googlegroups.com">ROS Orphaned Package Maintainers</maintainer>

  <license>MIT</license>
  <url type="website">http://codesuppository.blogspot.com</url>
  <url type="bugtracker">http://kforge.ros.org/robotmodel/Trac</url>
  <url type="repository">http://kforge.ros.org/robotmodel/convex_decomposition</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>unzip</build_depend>

  <exec_depend>unzip</exec_depend>
  <export>
      <build_type>ament_cmake</build_type>
  </export>
</package>
